// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component renders a progress bar using default props 1`] = `
.sxkhdpa {
  border-radius: 25px;
  height: var(--sizes-0);
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sxkhdpa4bknw--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sxkhdpa sxkhdpa4bknw--comp sxkhdpa03kze--appearance-outline sxkhdpa03kze--theme-primary"
    data-max="100"
    data-radix-progress=""
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-radix-progress-indicator=""
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;

exports[`ProgressBar component renders a solid progress bar 1`] = `
.sxkhdpa {
  border-radius: 25px;
  height: var(--sizes-0);
  position: relative;
  overflow: hidden;
  width: 100%;
}

.sxkhdpa4bknw--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-primary500);
}

.sxkhdpa4qfa7--comp {
  border: 1px solid var(--colors-tonal400);
  background: white;
  color: var(--colors-secondary500);
}

.sxkhdpamrg77--comp {
  background: var(--colors-tonal300);
  color: var(--colors-primary500);
}

.sxypqsd {
  box-sizing: border-box;
  position: absolute;
  background-color: currentcolor;
  height: 100%;
}

<div>
  <div
    aria-label="label"
    aria-valuemax="100"
    aria-valuemin="0"
    class="sxkhdpa sxkhdpamrg77--comp sxkhdpa03kze--appearance-solid sxkhdpa03kze--theme-primary"
    data-max="100"
    data-radix-progress=""
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="sxypqsd"
      data-max="100"
      data-radix-progress-indicator=""
      data-state="indeterminate"
      style="width: 50%;"
    />
  </div>
</div>
`;
